log
Thu 28 Sep 2023 12:59:33 AM UTC: 
 tests:  0|4
total_score: 0/70
03a9ea9
Thu 28 Sep 2023 01:12:32 AM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
heap.c:35:1: error: unknown type name ‘Implemente’
   35 | Implemente la función `Heap* createHeap()`. Esta función crea un nuevo dato de tipo Heap inicializando sus variables. Considere que la capacidad incial es de 3 casillas para el arreglo.
      | ^~~~~~~~~~
heap.c:35:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘función’
   35 | Implemente la función `Heap* createHeap()`. Esta función crea un nuevo dato de tipo Heap inicializando sus variables. Considere que la capacidad incial es de 3 casillas para el arreglo.
      |               ^~~~~~~
heap.c:35:23: error: stray ‘`’ in program
   35 | Implemente la función `Heap* createHeap()`. Esta función crea un nuevo dato de tipo Heap inicializando sus variables. Considere que la capacidad incial es de 3 casillas para el arreglo.
      |                       ^
heap.c:35:15: error: unknown type name ‘función’
   35 | Implemente la función `Heap* createHeap()`. Esta función crea un nuevo dato de tipo Heap inicializando sus variables. Considere que la capacidad incial es de 3 casillas para el arreglo.
      |               ^~~~~~~
heap.c:35:42: error: stray ‘`’ in program
   35 | Implemente la función `Heap* createHeap()`. Esta función crea un nuevo dato de tipo Heap inicializando sus variables. Considere que la capacidad incial es de 3 casillas para el arreglo.
      |                                          ^
In file included from test.c:4:
heap.c:36:71: error: stray ‘`’ in program
   36 |    > Recuerde reservar memoria para el Heap y también para el arreglo `heapArray`.
      |                                                                       ^
heap.c:36:81: error: stray ‘`’ in program
   36 |    > Recuerde reservar memoria para el Heap y también para el arreglo `heapArray`.
      |                                                                                 ^
Compilation failed
94d850e
Thu 28 Sep 2023 01:12:46 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
30eba60
Thu 28 Sep 2023 01:13:34 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
b26786d
Thu 28 Sep 2023 01:15:41 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
97f6c07
Thu 28 Sep 2023 01:19:54 AM UTC: 
 heap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  1|3
total_score: 10/70
20c3f67
Thu 28 Sep 2023 01:20:35 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:25:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   25 |   return pq -> heapArray[0];
      |          ~~~~~~~~~~~~~~~^~~
heap.c:26:1: error: control reaches end of non-void function [-Werror=return-type]
   26 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
eaa35c2
